api: Remove api to PUT or GET whole instance config
